# pytest-kivy

./: LICENSE  README.rst  api.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: pythonapp.yml
_sources/: getting_started.rst.txt  index.rst.txt
doc/source/: api.rst  conf.py
pytest_kivy/: __init__.py  app.py  input.py  plugin.py  resolver.py  tools.py
pytest_kivy/tests/: __init__.py  test_app.py  test_async_backend.py  test_params.py  test_resolver.py
