[options]
install_requires =
    pytest>=3.6
    kivy >= 1.11.1


[options.extras_require]
dev =
    pytest-cov
    flake8
    sphinx-rtd-theme
    coveralls
trio =
    trio
    pytest-trio
asyncio =
    pytest_asyncio


[flake8]
ignore = E125,E126,E127,E128,E402,E741,E731,W503,F401,W504,F841,E722
max-line-length = 80
exclude = __pycache__,.tox,.git/,doc/,build/,.eggs/
statistics = true
show-source = true
count = true
